# tree-sitter-gram

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CRATES_IO.md  Cargo.toml  DEVELOP.md  LICENSE  Makefile  Package.resolved  Package.swift  README.md  SYNTAX_NOTES.md  WARP.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.cursor/rules/: specify-rules.mdc  verify-gram-syntax.mdc
.cursor/skills/speckit-implement/: SKILL.md
.cursor/skills/speckit-plan/: SKILL.md
.cursor/skills/speckit-specify/: SKILL.md
.github/workflows/: build.yml  ci.yml  gram-lsp-release-assets.yml  gram-release-assets.yml  npm-publish-github-packages.yml  npm-publish.yml  publish-to-test-pypi.yml  publish.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
bindings/c/: tree-sitter-gram.pc.in  tree-sitter-pop.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  binding_test.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gram/: __init__.py  binding.c
bindings/python/tree_sitter_pop/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGram/: gram.h
bindings/swift/TreeSitterGramTests/: TreeSitterGramTests.swift
bindings/swift/TreeSitterPop/: pop.h
docs/: gram-ebnf.md  gram-guide.md  gram-reference.md  gram.commented.ebnf  gram.ebnf  gram.g4  gram.rr.html  tagged-strings-and-injections.md
editors/: README.md
editors/zed/: .gitignore  Cargo.toml  README.md  build.rs  example.gram  extension.toml  test.gram  zed
editors/zed/languages/gram/: config.toml  highlights.scm  indents.scm  injections.scm  locals.scm
editors/zed/src/: lib.rs
examples/data/: hello.gram  highlights-test-definitions.gram  highlights-test-keys.gram  letters.gram  numbers.gram  route-66.gram  social.gram  test-no-comments.gram  test-simple.gram
examples/go/: go.mod  inspect.go
examples/html/: README.md  index.html  package-lock.json  package.json
examples/node/: inspect.js  package-lock.json  package.json
examples/parcel/: index.html  index.js  package-lock.json  package.json
examples/parcel/.parcel-cache/: 27b15000035759fb  3d209e186d136ee4.txt  3d768476afb5393b  49eb8262c63d9c71  4d09c357daa672bc  50ddd777e0c77cbc  524814bb2dca68ba  575b7cf66ee4df73  6054c31dbe703fb9-BundleGraph-0  7f973df67467291d-AssetGraph-0  8165f67cf8a79953  86f13085ef56296e  a8a28560cabca33b-AssetGraph-0  c3bfc834f076e792.txt  data.mdb  e012355d7a4bb9e2.txt  lock.mdb  requestGraph-8b272c8491111040-0  requestGraph-nodes-0-8b272c8491111040-0  snapshot-8b272c8491111040.txt
examples/python/: inspect.py  parse_gram.py  pyproject.toml
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
examples/webpack/: package-lock.json  package.json  webpack.config.js
examples/webpack/src/: index.js
proposals/: editor-improvements.md  extended-annotation.md  gram-cli-w-extentions.md  gram-lint-rules.md
queries/: highlights.scm  indents.scm  injections.scm  locals.scm
scripts/: ci-local.sh  prepare-zed-extension.sh
skills/gram/: SKILL.md
specs/001-line-comments/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-line-comments/checklists/: requirements.md
specs/001-line-comments/contracts/: comments.md
specs/001-refactor-terminology/: spec.md
specs/002-refactor-terminology/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-refactor-terminology/checklists/: requirements.md
specs/002-refactor-terminology/contracts/: README.md
specs/003-extended-annotation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-extended-annotation/checklists/: requirements.md
specs/003-extended-annotation/contracts/: README.md  annotations.md
specs/004-editor-improvements/: data-model.md  example.schema.gram  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-editor-improvements/contracts/: README.md  (+5 more)
specs/005-tighten-quoted-identifiers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-gram-lsp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-unified-gram-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-skill-install/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: grammar.json  node-types.json  parser.c
test/corpus/: annotation.txt  array_properties.txt  brackets.txt  comments.txt  double_arrows.txt  empty_nodes.txt  empty_nodes_rels.txt  empty_relationships.txt  extended_annotations.txt  gql_grqph_type.notxt  gql_grqph_type.txt  graph_global.txt  graph_shape.txt  identifiers.txt  labeled_nodes.txt  labeled_relationships.txt  map_values.txt  node_annotations.txt  nodes.txt  number_graphs.txt  number_values.txt  patterns.txt  range_values.txt  records.txt  relationship_annotations.txt  relationships.txt  series.txt  single_arrows.txt  squiggle_arrows.txt  subject_pattern.txt  subjects.txt  text_graphs.txt  text_values.txt  value_pair.txt
test/experiments/: annotation.gram  equivalence.gram  named_paths.notxt
tools/gram/: Cargo.toml  README.md
tools/gram-lint/: Cargo.toml
tools/gram-lint/examples/: explore_errors.rs
tools/gram-lint/src/: main.rs
tools/gram/src/: check.rs  dispatch.rs  main.rs  types.rs
tools/gram/src/extension/: install.rs  list.rs  mod.rs  registry.rs  remove.rs
tools/gram/src/skill/: install.rs  list.rs  mod.rs  remove.rs
tools/gram/tests/: cli_check.rs  cli_dispatch.rs  cli_extension.rs  cli_skill.rs
tools/gram/tests/fixtures/: invalid.gram  valid.gram
tools/lsp/: Cargo.toml  README.md
tools/lsp/src/: diagnostics.rs  elements.rs  lib.rs  lsp.rs  main.rs  parse.rs  record_keys.rs  symbols.rs  top_level.rs  utf16.rs
(+16 files in other folders)
