[workspace]
members = [
    ".",
    "tools/gram-lint"
]
resolver = "2"

[package]
name = "tree-sitter-gram"
description = "Gram grammar for tree-sitter"
version = "0.2.4"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gram"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/gram-data/tree-sitter-gram"
edition = "2021"
autoexamples = false
publish = true

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = { version = "0.25" }

[build-dependencies]
cc = "1.0.87"
