[package]
name = "gram_zed_extension"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/gram-data/tree-sitter-gram"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7"

# Standalone workspace root so this crate is not treated as a stray member of the
# repository workspace (see root `Cargo.toml` `[workspace]`).
[workspace]
members = ["."]
