[package]
name = "tree-sitter-gram-rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tree-sitter = "0.22.2"
tree-sitter-gram = { path = "../../" }

[build-dependencies]
cc="*"
