[package]
name = "gram-lint"
version = "0.1.0"
edition = "2021"
description = "A simple linter for gram notation files"
license = "MIT"
repository = "https://github.com/gram-data/tree-sitter-gram"
publish = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-gram = { version = "0.2.1", path = "../.." }

[[bin]]
name = "gram-lint"
path = "src/main.rs"

