[package]
name = "gram-lint"
version.workspace = true
edition.workspace = true
description = "A simple linter for gram notation files"
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-gram = { path = "../.." }

[[bin]]
name = "gram-lint"
path = "src/main.rs"

