[package]
name = "gram"
version.workspace = true
edition.workspace = true
description = "Unified gram CLI for validating and extending gram notation"
license.workspace = true
repository.workspace = true
publish = true

[[bin]]
name = "gram"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
directories = "5"
walkdir = "2"
toml = "0.8"
flate2 = "1"
tar = "0.4"
zip = "2"
ariadne = "0.6"
gram-lsp = { path = "../lsp" }
tree-sitter-gram = { path = "../.." }
tree-sitter = "0.25"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata.dist]
targets = [
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
